overlays/production/sp-web/virtual-service.yml
## AUTO GENERATED
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sp-web
  namespace: demo
spec:
  gateways:
    - sp-example-com
  hosts:
    - "*"
  http:
    - name: http-sp-web-primary
      match:
        - uri:
            exact: /
      route:
        - destination:
            host: sp-web-primary.demo.svc.cluster.local
            port:
              number: 80
          weight: 100
        - destination:
            host: sp-web-secondary.demo.svc.cluster.local
            port:
              number: 80
          weight: 0
